--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -30,22 +30,29 @@ knitr::opts_chunk$set(
   echo = TRUE
 )
 
-
 options(
   knitr.kable.NA = '-',
   htmltools.preserve.raw = FALSE,
   knitr.duplicate.label = "allow",
   ggplot2.discrete.fill = c("#1A85FF", "#ff2976", "#FFC20A"),
   ggplot2.discrete.colour = c("#1A85FF", "#ff2976", "#FFC20A"),
-  ggplot2.continuous.fill = scale_fill_gradient2(
-    low = "#04bf78", mid = "white", high = "#FFC20A", 
-    na.value = "white", limits = c(-0.4, 0.4)
+  ggplot2.continuous.fill = ggplot2::scale_fill_gradient2(
+    low = "#04bf78", 
+    mid = "white", 
+    high = "#FFC20A", 
+    na.value = "white", 
+    limits = c(-0.4, 0.4)
   ),
-  ggplot2.continuous.colour = scale_fill_gradient2(
-    low = "#04bf78", mid = "white", high = "#FFC20A", 
-    na.value = "white", limits = c(-0.4, 0.4)
+  ggplot2.continuous.colour = ggplot2::scale_fill_gradient2(
+    low = "#04bf78", 
+    mid = "white",
+    high = "#FFC20A", 
+    na.value = "white",
+    limits = c(-0.4, 0.4)
   )
 )
+
+
 ```
 
 
@@ -76,6 +83,8 @@ theme_set(
     panel.background = element_rect(fill = "white", colour = NA)
   )
 )
+
+
 
 ```
 
@@ -750,12 +759,18 @@ coefs %>%
 ```{r posteriorfix, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.cap="Estimated posterior distributions of coefficients in Model 4. A\\) Population-level effects. Distributions indicate the estimated posterior likelihood density of regression coefficients of fixed effects. Credible intervals (*CrI*), represented with increasingly lighter segmentents in the distribution indicate the range of values that contain the true value with 95\\%, 80\\%, and 50\\% probability. Black dots represent the mean of each distribution. B\\) Participant\\-level coefficient variability. The model estimated participant\\-level coefficients to account for the dependency between responses from the same participant. Distributions in this panel indicate the estimated variability across coefficients from different participants, expressed as standard deviations (*SD*). C\\) Correlation between participant\\-level effects. The model allowed participant-level coefficients to co\\-vary. This panel represents the Pearson correlations between each pair of coefficients, expressed as the mean of the posterior distribution of each  estimated correlation.", fig.height=7, fig.width=6.5}
 
 
-
 coefs <- fixef(fit_6) %>% 
   as.data.frame() %>% 
   rownames_to_column("variable") %>% 
   clean_names() %>% 
-  mutate_at(vars(estimate:q97_5), ~ifelse(variable=="Intercept", inv_logit_scaled(.), ./4)) %>% 
+  mutate_at(
+    vars(estimate:q97_5),
+    ~ifelse(
+      variable=="Intercept", 
+      inv_logit_scaled(.), 
+      ./4
+    )
+  ) %>% 
   group_split(variable) %>% 
   set_names(make_clean_names(map(., "variable"))) %>% 
   map(select, -variable) %>% 
@@ -765,93 +780,219 @@ str_repl <- c(
   "Intercept" = "Intercept",
   "frequency_zipf_std" = "Frequency\n[+1 SD]",
   "pthn_std:lv_std" = "PTHN \u00d7 Levenshtein", 
-  "lv_std:group1" = "Levenshtein \u00d7 Group 1",
-  "lv_std:group2" = "Levenshtein \u00d7 Group 2",
+  "lv_std:groupENGvs.SPA" = "Levenshtein \u00d7 Group 1",
+  "lv_std:groupENGMCATvs.ENGMSPA" = "Levenshtein \u00d7 Group 2",
   "lv_std" = "Levenshtein\n[+1 SD]",
   "pthn_std" = "PTHN\n[+1 SD]",
-  "group1" =  "Group 1\n[ENG-* vs. SPA-CAT]",
-  "group2" = "Group 2\n[ENG-CAT vs. ENG-SPA]"
+  "groupENGvs.SPA" =  "Group 1\n[cat/spa-ENG vs. cat-SPA]",
+  "groupENGMCATvs.ENGMSPA" = "Group 2\n[cat-ENG vs. spa-ENG]"
 )
 
+post_draws <-  gather_draws(
+  fit_6, 
+  `b_.*`, 
+  `sd_.*`, 
+  regex = TRUE
+) 
 
 # fixed effects
-post_fix <- posterior_draws_fixed %>% 
+post_fix <- post_draws %>% 
   filter(str_detect(.variable, "b_")) %>% 
   mutate(
     .variable_name = str_remove(.variable, "b_") %>% 
       str_replace_all(str_repl) %>%  
       factor(
         levels = c(
-          "Intercept", "Frequency\n[+1 SD]", "PTHN\n[+1 SD]", 
-          "Levenshtein\n[+1 SD]", "PTHN \u00d7 Levenshtein",
-          "Group 1\n[ENG-* vs. SPA-CAT]",
-          "Group 2\n[ENG-CAT vs. ENG-SPA]",
-          "Levenshtein \u00d7 Group 1", "Levenshtein \u00d7 Group 2"
+          "Intercept", 
+          "Frequency\n[+1 SD]",
+          "PTHN\n[+1 SD]", 
+          "Levenshtein\n[+1 SD]",
+          "PTHN \u00d7 Levenshtein",
+          "Group 1\n[cat/spa-ENG vs. cat-SPA]",
+          "Group 2\n[cat-ENG vs. spa-ENG]",
+          "Levenshtein \u00d7 Group 1", 
+          "Levenshtein \u00d7 Group 2"
         )
       ),
-    .value = ifelse(str_detect(.variable, "Intercept"), inv_logit_scaled(.value), .value/4)
+    .value = ifelse(
+      str_detect(.variable, "Intercept"),
+      inv_logit_scaled(.value), 
+      .value/4
+    )
   ) %>% 
   arrange(.variable) %>% 
-  ggplot(aes(.value, fct_rev(.variable_name))) +
+  ggplot() +
+  aes(
+    .value,
+    fct_rev(.variable_name)
+  ) +
   geom_vline(xintercept = 0) +
-  stat_slab(aes(fill = stat(cut_cdf_qi(cdf, .width = c(.5, .8, .95), labels = percent_format())))) +
-  stat_pointinterval(.width = 0, point_size = 1) +
-  scale_fill_manual(values = c("#1A85FF", "#9ccaff", "#d2e5fc"), na.translate = FALSE) +
-  scale_x_continuous(labels = function(x) percent(round(x, 1))) +
-  labs(x = "P(Correct)", y = "Posterior probability density", fill = "CrI") +
+  stat_slab(
+    aes(
+      fill = stat(
+        cut_cdf_qi(
+          cdf, 
+          .width = c(.5, .8, .95),
+          labels = percent_format()
+        )
+      )
+    )
+  ) +
+  stat_pointinterval(
+    .width = 0, 
+    point_size = 1
+  ) +
+  scale_fill_manual(
+    values = c("#1A85FF", "#9ccaff", "#d2e5fc"),
+    na.translate = FALSE
+  ) +
+  scale_x_continuous(
+    labels = function(x) percent(round(x, 1))
+  ) +
+  labs(
+    x = "P(Correct)", 
+    y = "Posterior probability density",
+    fill = "CrI"
+  ) +
   theme(
     legend.position = c(1, 0.25),
     legend.direction = "vertical",
-    legend.background = element_rect(fill = "grey95"),
-    legend.key = element_rect(fill = "grey95", colour = "grey95"), 
+    legend.background = element_rect(
+      fill = "grey95"
+    ),
+    legend.key = element_rect(
+      fill = "grey95", 
+      colour = "grey95"
+    ), 
     legend.key.height = unit(0.1, "cm"),
     axis.title.y = element_blank(),
-    legend.text = element_text(size = 7),
-    axis.text.x = element_text(colour = "black"),
-    axis.text.y = element_text(colour = "black", hjust = 1),
+    legend.text = element_text(
+      size = 7
+    ),
+    axis.text.x = element_text(
+      colour = "black"
+    ),
+    axis.text.y = element_text(
+      colour = "black",
+      hjust = 1
+    ),
     axis.ticks.y = element_blank(),
-    panel.grid.major.y = element_line(colour = "grey", size = 0.5)
+    panel.grid.major.y = element_line(
+      colour = "grey", 
+      size = 0.5
+    )
   ) 
 
 
 
 # SD of random effects
-post_sd_data <- posterior_draws_fixed %>% 
-  filter(str_detect(.variable, "sd_")) %>% 
-  mutate(
-    .variable_name = str_remove(.variable, "sd_participant__|sd_word__") %>% 
-      str_replace_all(str_repl) %>% 
-      factor(
-        levels = c(
-          "Intercept", "Frequency\n[+1 SD]", "PTHN\n[+1 SD]", 
-          "Levenshtein\n[+1 SD]", "PTHN \u00d7 Levenshtein",
-          "Group 1\n[ENG-* vs. SPA-CAT]",
-          "Group 2\n[ENG-CAT vs. ENG-SPA]",
-          "Levenshtein \u00d7 Group 1", "Levenshtein \u00d7 Group 2"
-        )
-      ),
-    group = case_when(
-      str_detect(.variable, "participant") ~ "Participants",
-      str_detect(.variable, "word") ~ "Words"
-    ),
-    .value = ifelse(str_detect(.variable, "Intercept"), inv_logit_scaled(.value), .value/4)
-  ) 
+post_sd_data <- post_draws 
+filter(str_detect(.variable, "sd_")) 
+mutate(
+  group = case_when(
+    str_detect(.variable, "participant") ~ "Participants",
+    str_detect(.variable, "word") ~ "Words"
+  ),    
+  .variable_name = str_remove(
+    .variable,
+    "sd_participant__|sd_word__"
+  ) )
+str_replace_all(str_repl) %>% 
+  factor(
+    levels = c(
+      "Intercept", 
+      "Frequency\n[+1 SD]",
+      "PTHN\n[+1 SD]", 
+      "Levenshtein\n[+1 SD]", 
+      "PTHN \u00d7 Levenshtein",
+      "Group 1\n[cat/spa-ENG vs. cat-SPA]",
+      "Group 2\n[cat-ENG vs. spa-ENG]",
+      "Levenshtein \u00d7 Group 1",
+      "Levenshtein \u00d7 Group 2"
+    )
+  ),
+.value = ifelse(
+  str_detect(.variable, "Intercept"), 
+  inv_logit_scaled(.value), 
+  .value/4
+)
+) 
 
-post_sd <- ggplot(filter(post_sd_data, group=="Participants"), aes(.value, fct_rev(.variable_name))) +
-  stat_slab(aes(fill = stat(cut_cdf_qi(cdf, .width = c(.5, .8, .95), labels = percent_format())))) +
-  stat_pointinterval(.width = 0, point_size = 1) +
-  scale_fill_manual(values = c("#ff2976", "#f2a7c2", "#fcd9e6"), na.translate = FALSE) +
-  scale_x_continuous(labels = percent, limits = c(0, 1)) +
-  labs(x = "SDs in P(Correct)", title = "By participant", fill = "CrI") +
-  theme(axis.text.x = element_blank()) +
+post_sd <- post_sd_data %>% 
+  ggplot() +
+  aes(.value, fct_rev(.variable_name)) +
+  stat_slab(
+    aes(
+      fill = stat(
+        cut_cdf_qi(
+          cdf, 
+          .width = c(.5, .8, .95),
+          labels = percent_format()
+        )
+      )
+    )
+  ) +
+  stat_pointinterval(
+    .width = 0, 
+    point_size = 1
+  ) +
+  scale_fill_manual(
+    values = c("#ff2976", "#f2a7c2", "#fcd9e6"), 
+    na.translate = FALSE
+  ) +
+  scale_x_continuous(
+    labels = percent, 
+    limits = c(0, 1)
+  ) +
+  labs(
+    x = "SDs in P(Correct)",
+    title = "By participant", 
+    fill = "CrI"
+  ) +
+  theme(
+    axis.text.x = element_blank()
+  ) +
   
-  ggplot(filter(post_sd_data, group=="Words"), aes(.value, fct_rev(.variable_name))) +
-  stat_slab(aes(fill = stat(cut_cdf_qi(cdf, .width = c(.5, .8, .95), labels = percent_format())))) +
-  stat_pointinterval(.width = 0, point_size = 1) +
-  scale_x_continuous(labels = percent, limits = c(0, 1)) +
-  labs(x = "SDs in P(Correct)", title = "By item", fill = "CrI") +
-  
-  plot_layout(ncol = 1, heights = c(0.85, 0.15), guides = "collect") &
+  post_sd_data %>% 
+  filter(group=="Words") %>% 
+  ggplot() +
+  aes(
+    .value, 
+    fct_rev(.variable_name)
+  ) +
+  stat_slab(
+    aes(
+      fill = stat(
+        cut_cdf_qi(
+          cdf, 
+          .width = c(.5, .8, .95), 
+          labels = percent_format()
+        )
+      )
+    )
+  ) +
+  stat_pointinterval(
+    .width = 0, 
+    point_size = 1
+  ) +
+  scale_x_continuous(
+    labels = percent, 
+    limits = c(0, 1)
+  ) +
+  labs(
+    x = "SDs in P(Correct)",
+    title = "By item",
+    fill = "CrI"
+  ) +
+  scale_fill_manual(
+    values = c("#ff2976", "#f2a7c2", "#fcd9e6"), 
+    na.translate = FALSE
+  ) +
+  plot_layout(
+    ncol = 1,
+    heights = c(0.85, 0.15), 
+    guides = "collect"
+  ) &
   theme(
     legend.position = "none",
     axis.text.y = element_text(hjust = 1),
@@ -881,25 +1022,67 @@ corr_mat[lower.tri(corr_mat)] <- NA
 
 corr_data <- corr_mat %>% 
   as.data.frame() %>% 
-  pivot_longer(-term1, names_to = "term2", values_to = ".value") %>% 
+  pivot_longer(
+    -term1, 
+    names_to = "term2",
+    values_to = ".value"
+  ) %>% 
   drop_na(.value)
 
 post_cors <- corr_data %>% 
-  mutate(term1 = factor(term1, levels = names(str_repl), ordered = TRUE),
-         term2 = factor(term2, levels = names(str_repl), ordered = TRUE)) %>% 
-  mutate_at(vars(term1, term2), str_replace_all, str_repl) %>% 
   mutate(
-    .value_label = case_when(term1==term2 ~ NA_character_, TRUE ~ printnum(.value, gt1 = FALSE)),
-    .value = case_when(term1==term2 ~ NA_real_, TRUE ~ .value)
+    term1 = factor(
+      term1, 
+      levels = names(str_repl),
+      ordered = TRUE
+    ),
+    term2 = factor(
+      term2, 
+      levels = names(str_repl),
+      ordered = TRUE
+    )
   ) %>% 
-  filter(term1 != "PTHN × Levenshtein", term2 != "Intercept") %>% 
-  ggplot(aes(fct_inorder(term1), fct_rev(fct_inorder(term2)), fill = .value)) +
+  mutate_at(
+    vars(term1, term2),
+    str_replace_all, 
+    str_repl
+  ) %>% 
+  mutate(
+    .value_label = case_when(
+      term1==term2 ~ NA_character_, 
+      TRUE ~ printnum(.value, gt1 = FALSE)
+    ),
+    .value = case_when(
+      term1==term2 ~ NA_real_, 
+      TRUE ~ .value
+    )
+  ) %>% 
+  filter(
+    term1 != "PTHN × Levenshtein", 
+    term2 != "Intercept"
+  ) %>% 
+  ggplot() +
+  aes(
+    fct_inorder(term1),
+    fct_rev(fct_inorder(term2)), 
+    fill = .value
+  ) +
   geom_tile(na.rm = TRUE) +
-  geom_text(aes(label = .value_label), size = 3, na.rm = TRUE) +
-  labs(x = "Term 1", y = "Term 2", fill = "Posterior\ncorrelation") +
+  geom_text(
+    aes(label = .value_label), 
+    size = 3, 
+    na.rm = TRUE) +
+  labs(
+    x = "Term 1", 
+    y = "Term 2",
+    fill = "Posterior\ncorrelation"
+  ) +
   scale_fill_gradient2(
-    low = "#04bf78", mid = "white", high = "#FFC20A", 
-    na.value = "white", limits = c(-0.4, 0.4)
+    low = "#04bf78", 
+    mid = "white",
+    high = "#FFC20A", 
+    na.value = "white", 
+    limits = c(-0.4, 0.4)
   ) +
   scale_x_discrete(position = "top") +
   coord_equal() +
@@ -914,15 +1097,24 @@ post_cors <- corr_data %>%
     axis.title.x = element_blank(),
     axis.title.y = element_blank(),
     axis.ticks = element_blank(),
-    axis.text.x = element_text(size = 6, angle = 90, hjust = 0, vjust = 1),
-    axis.text.y = element_text(size = 6, vjust = 1, hjust = 1)
+    axis.text.x = element_text(
+      size = 6,
+      angle = 90,
+      hjust = 0, 
+      vjust = 1),
+    axis.text.y = element_text(
+      size = 6,
+      vjust = 1,
+      hjust = 1
+    )
   )
 
-post_fix / ((post_sd | post_cors) + plot_layout(widths = c(0.6, 0.4))) +
+post_fix / (
+  (post_sd | post_cors) +
+    plot_layout(widths = c(0.6, 0.4))
+) +
   plot_layout() +
   plot_annotation(tag_levels = "A")
-
-
 
 ```
 
@@ -930,7 +1122,25 @@ post_fix / ((post_sd | post_cors) + plot_layout(widths = c(0.6, 0.4))) +
 ## Random effects
 
 ```{r post_re_participant, echo=FALSE, fig.height=6, fig.width=9, message=FALSE, warning=FALSE, paged.print=FALSE}
-post_re <- posterior_draws_random$participants %>% 
+
+nd_re_participants <- expand.grid(
+  participant = unique(fit$data$participant),
+  lv_std = c(-1, 0, 1),
+  frequency_zipf_std = 0,
+  pthn_std = seq(
+    min(fit$data$pthn_std, na.rm = TRUE),
+    max(fit$data$pthn_std, na.rm = TRUE),
+    by = 0.1
+  ),
+  group = NA
+)
+
+post_re <- add_epred_draws(
+  nd_re_participants, 
+  fit, 
+  re_formula = ~ (1 + frequency_zipf_std + pthn_std*lv_std | participant),
+  ndraws = 50
+)  %>% 
   mean_qi() %>% 
   ungroup() %>% 
   left_join(select(participants, participant, group)) %>% 
@@ -978,36 +1188,37 @@ ggplot(post_re,
 fixed_intercept <- fixef(fit_6)[1,c(1, 3, 4)] %>% 
   inv_logit_scaled()
 
-post_re <- posterior_draws_random$words   %>% 
-  ungroup() %>% 
-  arrange(word, .param) %>% 
-  mutate(
-    .param_name = str_replace_all(.param, str_repl) %>%  
-      factor(
-        levels = c(
-          "Intercept", "Frequency\n[+1 SD]", "PTHN\n[+1 SD]", 
-          "Levenshtein\n[+1 SD]", "PTHN \u00d7 Levenshtein",
-          "Group 1\n[ENG-* vs. SPA-CAT]",
-          "Group 2\n[ENG-CAT vs. ENG-SPA]",
-          "Levenshtein \u00d7 Group 1", "Levenshtein \u00d7 Group 2"
-        )
-      ),
-    .value = inv_logit_scaled(.value)
-  )
+nd_re_words <- expand.grid(
+  word = unique(fit_6$data$word),
+  pthn_std = c(-1, 1),
+  frequency_zipf_std = 0,
+  lv_std = seq(
+    min(fit_6$data$lv_std, na.rm = TRUE), 
+    max(fit_6$data$lv_std, na.rm = TRUE
+    ), by = 0.1
+  ),
+  group = NA
+)
 
-ggplot(
-  post_re,
+post_re <- add_epred_draws(
+  nd_re_words, 
+  fit_6, 
+  re_formula = ~ (1| word),
+  ndraws = 50
+) %>% 
+  ungroup()
+
+post_re %>% 
+  ggplot() +
   aes(
-    .value,
-    reorder(as.factor(word), .value)
-  )
-) +
+    .epred,
+    reorder(as.factor(word), .epred)
+  ) +
   geom_vline(
     xintercept = fixed_intercept[1],
     colour = "grey", 
     size = 1
   ) +
-  
   stat_interval(
     size = 1.5,
     .width = c(0.5, 0.67, 0.95)
@@ -1097,7 +1308,7 @@ means <- responses %>%
     prop_se = prop_adj_se(successes, n)
   )
 
-responses %>% 
+word_accuracy <- responses %>% 
   mutate(
     stim = paste0(
       word, " (", ipa1, ") / ", 
@@ -1114,7 +1325,9 @@ responses %>%
   mutate(
     prop = prop_adj(successes, n),
     prop_se = prop_adj_se(successes, n)
-  ) %>% 
+  )
+
+word_accuracy %>% 
   ggplot() +
   aes(
     x = prop,
@@ -1202,121 +1415,270 @@ ggsave(here("img", "accuracy_empirical.png"), height = 9, width = 15, dpi = 500)
 ```{r marginaleffects, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.width=7, fig.height=3.5, fig.cap="Expected mean posterior predictions from Model 4. A) Population-level predictions: the X-axis and the Y-axis represent the PTHN score (in standard deviations from the mean) and the probability of correct translation, respectively. We simulated 300 observations from the posterior distribution of the model: 100 simulations for translations with no similarity (0% Levenshtein), 100 simulations for translations with mean accuracy (20.51% Levenshtein), and 100 simulations for translations with the maximum observed accuracy (83.33% Levenshtein). We did this across the range of values of the PTHN scores. For each simulation, we drew a single sample from the posterior distribution of each coefficient. Each simulation is depicted in the graph as a line: pink for minimum similarity translations, blue for hight similarity translations, and yellow for maximum similarity translations. Black, thick lines indicate the expected mean value of the posterior predictions of the model for each condition. The dispersion of the lines indicates the uncertainty of our predictions. We computed these posterior predictions for each group of participants, and plot tem in separate panels."}
 
 nd <- expand.grid(
-	lv_std = c(
-		min(fit_6$data$lv_std),
-		0,
-		max(fit_6$data$lv_std)
-	),
-	frequency_zipf_std = 0,
-	pthn_std = seq(
-		min(fit_6$data$pthn_std, na.rm = TRUE),
-		max(fit_6$data$pthn_std, na.rm = TRUE),
-		by = 0.1
-	),
-	group = unique(fit_6$data$group)
+  lv_std = c(
+    min(fit_6$data$lv_std),
+    0,
+    max(fit_6$data$lv_std)
+  ),
+  frequency_zipf_std = 0,
+  pthn_std = seq(
+    min(fit_6$data$pthn_std, na.rm = TRUE),
+    max(fit_6$data$pthn_std, na.rm = TRUE),
+    by = 0.1
+  ),
+  group = unique(fit_6$data$group)
 )
 
 m <- add_epred_draws(
-	nd, 
-	fit_6, 
-	ndraws = 100, 
-	re_formula = NA
+  nd, 
+  fit_6, 
+  ndraws = 100, 
+  re_formula = NA
 ) %>% 
-	mutate(
-		lv_std = factor(
-			lv_std,
-			levels = c(
-				min(fit_6$data$lv_std),
-				0,
-				max(fit_6$data$lv_std)
-			),
-			labels = c(
-				paste0("-1 SD (", percent(min(responses$lv, na.rm = TRUE)), ")"),
-				paste0("Mean (", percent(mean(responses$lv, na.rm = TRUE)), ")"),
-				paste0("+1 SD (", percent(max(responses$lv, na.rm = TRUE)), ")")
-			)
-		) 
-	)
+  mutate(
+    lv_std = factor(
+      lv_std,
+      levels = c(
+        min(fit_6$data$lv_std),
+        0,
+        max(fit_6$data$lv_std)
+      ),
+      labels = c(
+        paste0("-1 SD (", percent(min(responses$lv, na.rm = TRUE)), ")"),
+        paste0("Mean (", percent(mean(responses$lv, na.rm = TRUE)), ")"),
+        paste0("+1 SD (", percent(max(responses$lv, na.rm = TRUE)), ")")
+      )
+    ) 
+  )
 
 
 ggplot(m) +
-	aes(
-		pthn_std, 
-		.epred,
-		colour = lv_std,
-		fill = lv_std
-	) +
-	facet_wrap(~group) +
-	geom_hline(
-		yintercept = 0.5, 
-		colour = "grey"
-	) +
-	geom_line(
-		aes(group = interaction(lv_std, .draw)), 
-		size = 0.65,
-		alpha = 0.5,
-		show.legend = TRUE
-	) +
-	stat_summary(
-		aes(linetype = lv_std), 
-		fun = mean, 
-		geom = "line",
-		colour = "black", 
-		size = 0.75,
-		show.legend = TRUE
-	) +
-	annotate(
-		"segment", 
-		x = -0.5, 
-		xend = -0.9, 
-		y = 0.85, 
-		yend = 0.85, 
-		arrow = arrow(length = unit(0.1, "cm")), 
-		size = .5
-	) +
-	annotate(
-		"segment", 
-		x = 2.25, 
-		xend = 2.65, 
-		y = 0.85, 
-		yend = 0.85, 
-		arrow = arrow(length = unit(0.1, "cm")),
-		size = .5
-	) +
-	annotate(
-		"text", 
-		x = -0.5, 
-		y = 0.95, 
-		size = 2.75,
-		label = "Less similar"
-	) +
-	annotate(
-		"text", 
-		x = 2.15, 
-		y = 0.95, 
-		size = 2.75,
-		label = "More similar"
-	) +
-	labs(
-		x = paste0("PTHN (+1 SD, ", round(sd(responses$pthn), 1), " higher-frequency neighbours)"),
-		y = "P(Correct)", 
-		colour = "Levenshtein similarity",
-		fill = "Levenshtein similarity",
-		linetype = "Levenshtein similarity",
-		title = "Population-level posterior predictions"
-	) +
-	scale_y_continuous(
-		labels = function(x) percent(round(x, 2)),
-		limits = c(0, 1),
-		breaks = seq(0, 1, 0.1)
-	) +
-	theme(
-		legend.position = "top",
-		plot.title = element_blank()
-	)
+  aes(
+    pthn_std, 
+    .epred,
+    colour = lv_std,
+    fill = lv_std
+  ) +
+  facet_wrap(~group) +
+  geom_hline(
+    yintercept = 0.5, 
+    colour = "grey"
+  ) +
+  geom_line(
+    aes(group = interaction(lv_std, .draw)), 
+    size = 0.65,
+    alpha = 0.5,
+    show.legend = TRUE
+  ) +
+  stat_summary(
+    aes(linetype = lv_std), 
+    fun = mean, 
+    geom = "line",
+    colour = "black", 
+    size = 0.75,
+    show.legend = TRUE
+  ) +
+  annotate(
+    "segment", 
+    x = -0.5, 
+    xend = -0.9, 
+    y = 0.85, 
+    yend = 0.85, 
+    arrow = arrow(length = unit(0.1, "cm")), 
+    size = .5
+  ) +
+  annotate(
+    "segment", 
+    x = 2.25, 
+    xend = 2.65, 
+    y = 0.85, 
+    yend = 0.85, 
+    arrow = arrow(length = unit(0.1, "cm")),
+    size = .5
+  ) +
+  annotate(
+    "text", 
+    x = -0.5, 
+    y = 0.95, 
+    size = 2.75,
+    label = "Less similar"
+  ) +
+  annotate(
+    "text", 
+    x = 2.15, 
+    y = 0.95, 
+    size = 2.75,
+    label = "More similar"
+  ) +
+  labs(
+    x = paste0("PTHN (+1 SD, ", round(sd(responses$pthn), 1), " higher-frequency neighbours)"),
+    y = "P(Correct)", 
+    colour = "Levenshtein similarity",
+    fill = "Levenshtein similarity",
+    linetype = "Levenshtein similarity",
+    title = "Population-level posterior predictions"
+  ) +
+  scale_y_continuous(
+    labels = function(x) percent(round(x, 2)),
+    limits = c(0, 1),
+    breaks = seq(0, 1, 0.1)
+  ) +
+  theme(
+    legend.position = "top",
+    plot.title = element_blank()
+  )
 
 
 ```
+
+# Additional analyses
+
+## Previous familiarity
+
+
+```{r familiarity-frequency-distribution, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.height=10, fig.width=10}
+
+familiarity_problematic <- here("data", "familiarity", "familiarity.xlsx") %>% read_xlsx() %>% 
+  rename(
+    word = presented,
+    word_2 = translation,
+    test_language = language,
+    problem = note
+  ) %>% 
+  mutate(
+    problem = ifelse(
+      str_detect(problem, "check coding"), 
+      "Check coding",
+      str_to_sentence(problem)
+    ),
+    group = ifelse(test_language=="Catalan", "ENG-CAT", "ENG-SPA")
+  ) %>% 
+  select(word, group, problem)
+
+
+familiarity <- stimuli %>% 
+  filter(group != "SPA-CAT") %>% 
+  mutate(
+    stim = paste0(
+      word1, " (", ipa1, ")", " / ",
+      word2, " (", ipa2, ")", " / ",
+      percent(lv, accuracy = 1)
+    ),
+    test_language = case_when(
+      group=="ENG-CAT" ~ "Catalan",
+      group=="ENG-SPA" ~ "Spanish",
+      group=="SPA-CAT" ~ "Catalan"
+    ),
+    word = replace_non_ascii(word1)
+  ) %>% 
+  left_join(familiarity_problematic) %>% 
+  select(
+    group, 
+    word = word,
+    stim,
+    problem
+  ) %>% 
+  left_join(filter(subtlex, test_language=="English")) %>% 
+  replace_na(
+    list(
+      frequency_count = 1,
+      frequency_zipf = 0.555,
+      problem = "Normal"
+    )
+  ) %>% 
+  left_join(select(word_accuracy, group, stim, prop, prop_se)) %>% 
+  group_by(group) %>% 
+  mutate(
+    word_reorder = reorder_within(word, frequency_zipf, group)
+  ) %>% 
+  ungroup()
+
+familiarity %>% 
+  ggplot() +
+  aes(
+    x = frequency_zipf,
+    y = word_reorder,
+    fill = problem,
+    colour = problem,
+    label = word
+  ) +
+  facet_wrap(~group, scales = "free_y") +
+  geom_text(size = 3) +
+  labs(
+    x = "Frequency (Zipf) of presented word in English",
+    y = "Word",
+    colour = "Problem"
+  ) +
+  scale_y_reordered() +
+  theme(
+    legend.position = "top",
+    panel.border = element_rect(fill = NA, colour = "grey"),
+    panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
+    legend.title = element_blank(),
+    axis.text.y = element_blank(),
+    axis.ticks.y = element_blank(),
+    axis.title.y = element_blank()
+  )
+
+ggsave(here("img", "problematic_frequency-distribution.png"), height = 10)
+
+```
+
+```{r previous-familiarity, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.height=3.5, fig.width=8}
+
+
+
+familiarity %>% 
+  ggplot() +
+  aes(
+    x = frequency_zipf,
+    y = prop,
+    colour = problem,
+    fill = problem,
+    label = word
+  ) +
+  facet_wrap(~group) +
+  geom_text(
+    size = 3
+  ) +
+  # geom_point(
+  #   shape = 1,
+  #   size = 1,
+  #   alpha = 0.5,
+  #   stroke = 1
+  # ) +
+  geom_smooth(
+    method = "lm",
+    colour = "black",
+    fill = "grey"
+  ) +
+  labs(
+    x = "Frequency (Zipf) of presented word in English",
+    y = "Accuracy",
+    colour = "Group",
+    fill = "Group"
+  ) +
+  scale_x_continuous(
+    limits = c(2, 6)
+  ) +
+  scale_y_continuous(
+    limits = c(0, 1),
+    labels = percent
+  ) +
+  theme(
+    legend.position = "none"
+  )
+
+ggsave(here("img", "problematic_frequency-accuracy.png"), height = 4, width = 10)
+
+
+```
+
+
+
+
+
+
 
 
 
